# FlapjackOS

./: CMakeLists.txt  LICENSE.txt  README.md  bochsrc.erb  bochsrc.template  boot.S  boot.s  build.sh  devlog.md  fill_page_table.S.inc  gitignore.template  grub.cfg  grub.cfg.erb  i386-elf.toolchain.cmake  install_to_usb_stick.sh  kernel.c  kernel.ld  mount_bootfd.sh  run.sh  x86_64-elf.toolchain.cmake
Common/: CMakeLists.txt  README.txt
Common/include/: console_printf.h  line_editor.h  line_editor.hpp  line_editor_private.h  linked_list.h.erb  ll_str.h  readline.h  readline_private.h
Common/include/common/: allocator.hpp  atomic_counter.hpp  bit_array.hpp  byte_buffer.hpp  cmpxchg.h  console_device.hpp  console_printf.hpp  data.hpp  either.hpp  elf.hpp  elf32.hpp  elf32_parser.hpp  elf64.hpp  elf64_parser.hpp  error.hpp  expected.hpp  global_allocator.hpp  interrupt_handler.hpp  interrupt_lock.hpp  keyboard_device.hpp  line_editor.hpp  linked_list.hpp  lock_guard.hpp  memory_allocator.hpp  minmax.hpp  misc.h  mutex.hpp  optional.hpp  perform_with_lock.hpp  ring_buffer.hpp  shared_pointer.hpp  spin_lock.h  spin_lock.hpp  static_stack.hpp  text_buffer.hpp  (+10 more)
Common/src/: bit_array.cpp  c_plus_plus_support.cpp  cmpxchg.c  console_printf.c  console_printf.cpp  interrupt_lock.cpp  line_editor.c  line_editor.cpp  linked_list.c.erb  ll_str.c  logger.cpp  malloc_zone.cpp  mutex.cpp  readline.c  spin_lock.c  stdio.c  stdio.cpp  stdlib.c  stdlib.cpp  string.c  string.cpp  text_buffer.cpp  text_line.cpp  text_terminal.cpp
Common/test/: dummy_keyboard_device.hpp  dummy_text_display_device.hpp  elf32_test_data.inc  elf64_test_data.inc  test_bit_array.cpp  test_either.cpp  test_elf32.cpp  test_elf64.cpp  test_expected.cpp  test_line_editor.cpp  test_linked_list.cpp  test_main.c  test_malloc_zone.cpp  test_optional.cpp  test_ring_buffer.cpp  test_shared_pointer.cpp  test_stdio.c  test_stdio.cpp  test_string.c  test_string.cpp  test_text_buffer.cpp  test_text_line.cpp  test_text_terminal.cpp  test_vector.cpp
Drivers/: CMakeLists.txt
Kernel/: CMakeLists.txt
Kernel/include/: backtrace.h  backtrace.hpp  brk.hpp  cleanup_kernel_memory_map_operation.hpp  concrete_page_frame_allocator.hpp  console.h  ctypes.h  elf_loader.hpp  elf_loader32.hpp  elf_loader64.hpp  elf_loader_factory.hpp  gdt.h  generic_interrupt_dispatcher.hpp  generic_interrupt_handler.hpp  generic_symbolicator_factory.hpp  get_frame_pointer.h  halt.h  hardware_memory_management_unit.hpp  idt.h  idt_asm.h  inout.h  interrupt_asm.h  interrupt_dispatcher.hpp  interrupt_handler.hpp  interrupt_lock.hpp  isr_install.h  kernel.hpp  kernel_address_space_bootstrap_operation.hpp  kernel_break_allocator.hpp  kernel_contiguous_memory_allocator.hpp  kernel_heap_allocator.hpp  kernel_image_info.hpp  kernel_memory_allocators.hpp  kernel_page_directory_populate_operation.hpp  kernel_policy.hpp  keyboard.h  kprintf.h  logger.hpp  logical_addressing.hpp  ltr.h  (+35 more)
Kernel/src/: backtrace.c  backtrace.cpp  brk.cpp  cleanup_kernel_memory_map_operation.cpp  console.c  elf_loader.cpp  elf_loader32.cpp  elf_loader64.cpp  elf_loader_factory.cpp  gdt.c  idt.c  interrupt_dispatcher.cpp  interrupt_lock.cpp  isr_install.c  isr_install.c.erb  isr_wrapper_asm.S  kernel.c  kernel.cpp  kernel_address_space_bootstrap_operation.cpp  kernel_break_allocator.cpp  kernel_contiguous_memory_allocator.cpp  kernel_heap_allocator.cpp  kernel_main.cpp  kernel_memory_allocators.cpp  kernel_page_directory_populate_operation.cpp  kprintf.c  logger.cpp  mmu.cpp  page_fault_interrupt_handler.cpp  page_frame_allocator.cpp  page_frame_allocator_factory.cpp  panic.c  panic.cpp  panic_interrupt_handler.cpp  pic.c  pit_timer.c  pit_timer.cpp  pit_timer_device.cpp  readline.c  scheduler.cpp  (+4 more)
Kernel/test/: mock_memory_management_unit.hpp  mock_paging_context.hpp  test_gdt.c  test_gdt.cpp  test_i386_concrete_physical_memory_map.cpp  test_i386_early_physical_memory_map.cpp  test_i386_extract_page_map_operation.cpp  test_i386_idt.cpp  test_i386_kernel_address_space_bootstrapper.cpp  test_i386_managed_physical_memory_map.cpp  test_i386_page_frame_controller.cpp  test_i386_page_map_level_one_controller.cpp  test_i386_page_map_level_two_controller.cpp  test_i386_page_table_entry.cpp  test_i386_physical_memory_map.cpp  test_i386_unmanaged_physical_memory_map.cpp  test_idt.c  test_idt.cpp  test_main.c  test_main.cpp  test_page_frame_allocator.cpp  test_page_frame_allocator_configuration_operation.cpp  test_printf.c  test_x86_64_early_physical_memory_map.cpp  test_x86_64_generic_page_directory_entry.cpp  test_x86_64_idt.cpp  test_x86_64_kernel_address_space_bootstrapper.cpp  test_x86_64_managed_physical_memory_map.cpp  test_x86_64_page_map_level_four_controller.cpp  test_x86_64_page_map_level_one_controller.cpp  test_x86_64_page_map_level_three_controller.cpp  test_x86_64_page_map_level_two_controller.cpp  test_x86_64_page_table_entry.cpp  test_x86_64_physical_memory_map.cpp  test_x86_64_tss.cpp  test_x86_64_unmanaged_physical_memory_map.cpp
KernelPlatformSupport/: CMakeLists.txt
KernelPlatformSupport/include/: creg.h  gdt_asm.h  get_ebp.h  halt.h  idt_asm.h  inout.h  interrupt_asm.h  logical_addressing.hpp  ltr.h  page_size.hpp  seg.h
KernelPlatformSupport/test/: mock_memory_management_unit.hpp  test_gdt.cpp  test_i386_gdt.cpp  test_i386_kernel_address_space_bootstrapper.cpp  test_i386_page_directory.cpp  test_i386_page_directory_entry.cpp  test_i386_page_table.cpp  test_i386_page_table_entry.cpp  test_i386_physical_memory_map.cpp  test_main.cpp  test_x86_64_gdt.cpp  test_x86_64_generic_page_directory_entry.cpp  test_x86_64_kernel_address_space_bootstrapper.cpp  test_x86_64_page_table_entry.cpp  test_x86_64_physical_memory_map.cpp
LibC/: CMakeLists.txt
LibC/include/: assert.h  stdio.h  string.h
LibC/src/: stdio.c  string.c
LibC/test/: test_main.c  test_stdio.c  test_string.c
Malloc/: CMakeLists.txt  README.txt
Malloc/src/: malloc_zone.c  malloc_zone.cpp
Malloc/test/: test_main.c  test_malloc_zone.c  test_malloc_zone.cpp
User/: CMakeLists.txt
User/src/: test1.S  test2.S
(+354 files in other folders)
